--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>My Portfolio</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/font-awesome/css/font-awesome.min.css">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+
+    <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script>
+    <script type='text/javascript' src='js/jquery.particleground.min.js'></script>
+    <script type='text/javascript' src='js/scripts.js'></script>
 </head>
 
 <body>
@@ -23,7 +26,7 @@
     <!-- End header -->
 
     <div id="lead">
-        <div id="lead-content">
+        <div id="lead-content" class="intro">
             <h1>Jiancheng Chen</h1>
             <h2>Software Engineer</h2>
             <a href="#" class="btn-rounded-white">Resume</a>
@@ -235,7 +238,7 @@
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2017 YOUR NAME
+                        Copyright &copy; 2018 JC
                     </p>
                 </div>
                 <div class="col-sm-2 top">
