--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <div id="lead-content" class="intro">
             <h1>Jiancheng Chen</h1>
             <h2>Software Engineer</h2>
-            <a href="#" class="btn-rounded-white">Resume</a>
+            <a href="https://daniel321c.github.io/resume.pdf" class="btn-rounded-white">Resume</a>
             <a href="https://github.com/daniel321c" class="btn-rounded-white">Github</a>
             <a href="https://www.linkedin.com/in/321daniel-chen/" class="btn-rounded-white">LinkedIn</a>
         </div>
@@ -177,7 +177,7 @@
                             as how the computer played. Advanced development would be a piano game, in which user can follow
                             the keyboard highlight sequence to play a song.
                         </p>
-                        <a href="#">View Project</a>
+                        <a href="https://github.com/daniel321c/android-game">View Project</a>
                     </div>
                     <!-- End .project-info -->
                 </div>
