--- a/index.html
+++ b/index.html
@@ -12,8 +12,6 @@
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 
-    <script type='text/javascript' src='js/jquery-1.11.1.min.js'></script>
-    <script type='text/javascript' src='js/jquery.particleground.min.js'></script>
     <!-- <script type='text/javascript' src='js/scripts.js'></script> -->
 </head>
 
@@ -279,8 +277,11 @@
         </div>
     </footer>
     <!-- End footer -->
+    <script  src='js/jquery-1.11.1.min.js'></script>
+    <script src='js/jquery.particleground.min.js'></script>
+    <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script> -->
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+
     <script src="js/scripts.js"></script>
 </body>
 
